<resources>
    <string name="app_name">Smartpush</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="add_server">Add Server</string>
    <string name="title_activity_controller">Mqtt Demo</string>
    <string name="title_home">Home</string>
    <string name="title_devices">Devices</string>
    <string name="title_groups">Groups</string>
    <string name="settings_button">Settings</string>
    <string name="about_button">About</string>
    <string name="how_to_setup_button">How to setup</string>
    <string name="h2s_1">The setup for this product can be found online.</string>
    <string name="h2s_2">Acces the tutorial by clicking the link below:</string>
    <string name="go_to_website">Go to website</string>
    <string name="check_box_h2s">(Don\'t show this screen again, just take me to the website.)</string>
    <string name="h2s_url">https://www.google.com/</string>
    <string name="reset_settings_title">Reset preferences</string>
    <string name="reset_settings_summary">Reset preferences everytime you leave the app</string>
    <string name="reset_button">Reset</string>
    <string name="preference_category">Global preferences</string>
    <string name="reset_one_time_summary">Reset preferences this time only</string>
    <string name="reset_one_time_title">Reset the preferences after leaving this screen</string>
    <string name="auto_remove_sumarry">Automatically remove pushers that are not online anymore</string>
    <string name="auto_remove_title">Auto-remove pushers</string>
</resources>
